--- a/hostel_managment/views/hostel_views.xml
+++ b/hostel_managment/views/hostel_views.xml
@@ -46,6 +46,7 @@
                             <field name="type"/>
                             <field name="hostel_rating"/>
                             <field name="other_info"/>
+                            <field name="ref_doc_id"/>
 
                         </group>
                     </sheet>
