--- a/hostel_managment/views/hoste_room_view.xml
+++ b/hostel_managment/views/hoste_room_view.xml
@@ -14,6 +14,7 @@
                     <field name="admission_date"/>
                     <field name="discharge_date"/>
                     <field name="duration"/>
+                    <field name="state"/>
                 </tree>
             </field>
         </record>
@@ -35,6 +36,8 @@
                             <field name="admission_date"/>
                             <field name="discharge_date"/>
                             <field name="duration"/>
+                            <field name="state"/>
+
                         </group>
                     </sheet>
                 </form>
